--- a/Assessment/Django 3/doctor/user/templates/login.html
+++ b/Assessment/Django 3/doctor/user/templates/login.html
@@ -5,7 +5,7 @@
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <div class="card shadow p-4" style="width: 100%; max-width: 400px;">
         <h3 class="text-center mb-4">Login</h3>
-        <form method="post">
+        <form method="POST" class="row g-3">
             {% csrf_token %}
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">User name</label>
